--- a/bio-info/index.html
+++ b/bio-info/index.html
@@ -49,27 +49,17 @@
   <div>
     <h1>Manuels de SVT :</h1>
     <ul>
-      <!-- <li><a href=""></a></li> -->
-      <!-- <li><a href="belin-1ere-svt-premiere.pdf">https://pixeldrain.com/u/JwR1sg5H</a></li>
-            <li><a href="belin-2nd-svt-seconde.pdf">https://pixeldrain.com/u/zHKxPzrV</a></li>
-            <li><a href="belin-svt-cycle4.pdf">https://pixeldrain.com/u/vyx6Nb2D</a></li>
-            <li><a href="belin-terminale-svt-terminale.pdf">https://pixeldrain.com/u/ZmQgq4Nv</a></li>
-            <li><a href="lelivrescolaire-2nd-45866264.pdf">https://pixeldrain.com/u/4Zm2BLN8</a></li>
-            <li><a href="lelivrescolaire-3e-55471020.pdf">https://pixeldrain.com/u/avhvToPT</a></li>
-            <li><a href="lelivrescolaire-4e-55471715.pdf">https://pixeldrain.com/u/r8NeBdQw</a></li>
-            <li><a href="lelivrescolaire-5e-55471829.pdf">https://pixeldrain.com/u/v37aHHaU</a></li>
-            <li><a href="lelivrescolaire-cycle 4-55471488.pdf">https://pixeldrain.com/u/riUTStwP</a></li>-->
-
-      <li><a href="https://pixeldrain.com/u/JwR1sg5H">belin-1ere-svt-premiere.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/zHKxPzrV">belin-2nd-svt-seconde.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/vyx6Nb2D">belin-svt-cycle4.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/ZmQgq4Nv">belin-terminale-svt-terminale.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/4Zm2BLN8">lelivrescolaire-2nd-45866264.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/avhvToPT">lelivrescolaire-3e-55471020.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/r8NeBdQw">lelivrescolaire-4e-55471715.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/v37aHHaU">lelivrescolaire-5e-55471829.pdf</a></li>
-      <li><a href="https://pixeldrain.com/u/riUTStwP">lelivrescolaire-cycle 4-55471488.pdf</a></li>
-
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/belin-1ere-svt-premiere.pdf">belin-1ere-svt-premiere.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/belin-2nd-svt-seconde.pdf">belin-2nd-svt-seconde.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/belin-svt-cycle4.pdf">belin-svt-cycle4.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/belin-terminale-svt-terminale.pdf">belin-terminale-svt-terminale.pdf</a></li>
+      <li><a href="hhtps://github.com/NohamR/Manuel/releases/download/bio-info/lelivrescolaire-2nd-45866264.pdf">lelivrescolaire-2nd-45866264.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/lelivrescolaire-3e-55471020.pdf">lelivrescolaire-3e-55471020.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/lelivrescolaire-4e-55471715.pdf">lelivrescolaire-4e-55471715.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/lelivrescolaire-5e-55471829.pdf">lelivrescolaire-5e-55471829.pdf</a></li>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/lelivrescolaire-cycle 4-55471488.pdf">lelivrescolaire-cycle 4-55471488.pdf</a></li>
+      <br>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/belin-lls-correction.zip">corection des manuels (belin et lelivrescolaire)</a></li>
     </ul>
 
     <table>
@@ -104,6 +94,10 @@
         <td>352</td>
       </tr>
     </table>
+
+    <ul>
+      <li><a href="https://github.com/NohamR/Manuel/releases/download/bio-info/hachette-hatier-correction.zip">corection des manuels (hachette et hatier)</a></li>
+    </ul>
 
   </div>
 </body>
